force-app/main/default/objects/Nebula__LogEntryTag__c/fields/Nebula__LogEntry__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LogEntry__c</fullName>
    <label>Log Entry</label>
    <referenceTo>Nebula__LogEntry__c</referenceTo>
    <relationshipLabel>Log Entry Tags</relationshipLabel>
    <relationshipName>LogEntryTags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>