force-app/main/default/objects/Nebula__LogEntryTag__c/fields/Nebula__LogEntryTimestamp__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LogEntryTimestamp__c</fullName>
    <formula>Nebula__LogEntry__r.Nebula__Timestamp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log Entry Timestamp</label>
    <type>DateTime</type>
</CustomField>