force-app/main/default/objects/Nebula__LogEntryTag__c/fields/Nebula__LogLink__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LogLink__c</fullName>
    <formula>HYPERLINK(
  Nebula__LogEntry__r.Nebula__Log__c,
  Nebula__LogEntry__r.Nebula__Log__r.Name,
  &apos;_top&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log</label>
    <type>Text</type>
</CustomField>