force-app/main/default/objects/Nebula__LogEntryTag__c/fields/Nebula__Tag__c.field-meta.xml
<CustomField>
    <fullName>Nebula__Tag__c</fullName>
    <label>Logger Tag</label>
    <referenceTo>Nebula__LoggerTag__c</referenceTo>
    <relationshipLabel>Tagged Log Entries</relationshipLabel>
    <relationshipName>LogEntryTags</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>