force-app/main/default/objects/Nebula__LogEntryTag__c/listViews/Nebula__All.listView-meta.xml
<ListView>
    <fullName>Nebula__All</fullName>
    <columns>NAME</columns>
    <columns>Nebula__Tag__c</columns>
    <columns>Nebula__LogEntry__c</columns>
    <columns>Nebula__LogLink__c</columns>
    <columns>Nebula__LogEntryOrigin__c</columns>
    <columns>Nebula__LogEntryTimestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>